<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/grey_900"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_global"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNumeroOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_oferta_numero"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDescripcionOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_descripcion_oferta"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/red_900"
                android:text="@string/btn_rechazar"
                android:textColor="@color/white"
                android:textStyle="italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/lime_900"
                android:text="@string/btn_preguntar"
                android:textColor="@color/white"
                android:textStyle="italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/light_green_800"
                android:text="@string/btn_aceptar"
                android:textColor="@color/white"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>